syntax = "proto3";

package cash.z.wallet.sdk.rpc;

// Compact block format for efficient scanning
message CompactBlock {
    uint32 proto_version = 1;
    uint64 height = 2;
    bytes hash = 3;
    bytes prev_hash = 4;
    uint32 time = 5;
    bytes header = 6;
    repeated CompactTx vtx = 7;
}

// Compact transaction
message CompactTx {
    uint64 index = 1;
    bytes hash = 2;
    uint32 fee = 3;
    repeated CompactSaplingSpend spends = 4;
    repeated CompactSaplingOutput outputs = 5;
}

// Compact Sapling spend
message CompactSaplingSpend {
    bytes nf = 1;
}

// Compact Sapling output
message CompactSaplingOutput {
    bytes cmu = 1;
    bytes ephemeral_key = 2;
    bytes ciphertext = 3;
}
